# addWork2course

./: .gitignore  README.md
3822B1PM1/Borisov/: CRSMatrix.h  CoordMatrix.h  LinearMatrix.h  main.cpp  ~$авнение.docx  Сравнение.docx
3822B1PM1/Borisov/include/: CRSMatrix.h  CoordMatrix.h  LinearMatrix.h  VectorMatrix.h
3822B1PM1/Borisov/samples/: main.cpp
3822B1PM1/Borisov/test/: test_matrix.cpp
3822B1PM1/Poroshin/: Compare.docx
3822B1PM1/Poroshin/LAB_2_ADD/include/: Matrix1.h  Matrix2.h  Matrix3.h  Matrix4.h
3822B1PM1/Poroshin/LAB_2_ADD/samples/: LAB_2_ADD.cpp  Stack_main.cpp
3822B1PM1/Poroshin/LAB_2_ADD/test/: test_Stack.cpp
3822B1PM1/Volochaev/: CRS.h  XY.h  main.cpp  matrix.h  simple_matrix.h  time.txt
3822B1PM2/Makhnev/: CMakeLists.txt  README.md  Results.xlsx
3822B1PM2/Makhnev/include/: tcompressedsparserow.h  tcoordinatelist.h  tdynamicvector.h  telementsvector.h  testtools.h  tmatrix.h  tvector.h
3822B1PM2/Makhnev/samples/: speedtest.cpp
3822B1PM2/Makhnev/test/: CMakeLists.txt  test_compressedsparserow.cpp  test_coordinatelist.cpp  test_telementsvector.cpp  test_tmatrix.cpp  test_tvector.cpp  test_vector.cpp
3822B1PM2/Petrov/: Test results.txt
3822B1PM2/Petrov/include/: TCRSMatrix.h  TCoordMatrix.h  TFlatMatrix.h  Test.h  tmatrix.h
3822B1PM2/Petrov/samples/: sample_matrix.cpp
3822B1PM2/Zykov/: CMakeLists.txt  Comparation.txt
3822B1PM2/Zykov/include/: TCOOMatrix.h  TCRSMatrix.h  TFlatMatrix.h  TVector.h  benchmark.h  tmatrix.h
3822B1PM2/Zykov/samples/: CMakeLists.txt  sample_matrix.cpp
3822B1PM2/Zykov/src/: CMakeLists.txt
3822B1PM2/Копытцын/: Тесты.xlsx
3822B1PM2/Копытцын/Matrix/: Matrix.sln
3822B1PM2/Копытцын/Matrix/Matrix/: CRS.h  Main.cpp  Matrix.vcxproj  Matrix.vcxproj.filters  V1Matrix.h  VMatrix.h
3822B1PM2/Копытцын/Matrix/Matrix/x64/Debug/: Matrix.exe.recipe  Matrix.ilk  vc143.idb
3822B1PM2/Копытцын/Matrix/Matrix/x64/Debug/Matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Matrix.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3822B1PR1/Ichetovkina/: .gitignore  CMakeLists.txt
3822B1PR1/Ichetovkina/include/: Header.h
3822B1PR1/Ichetovkina/sample/: main.cpp
3822B1PR1/Ichetovkina/source/: CRSMatrix.cpp
3822B1PR1/Krylov/: CMakeLists.txt  report.md
3822B1PR1/Krylov/include/: tbenchmark.h  tflatmatrix.h  tsparsematrix.h
3822B1PR1/Krylov/samples/: CMakeLists.txt  sample_bench.cpp  sample_crsmatrix.cpp
3822B1PR1/Milovankin/: CMakeLists.txt
3822B1PR1/Milovankin/inc/: TCRSMatrix.h  TFlatMatrix.h
3822B1PR1/Milovankin/smp/: crsmatrix_sample.cpp  flatmatrix_sample.cpp
3822B1PR1/Sidorina/: Comparation.txt
3822B1PR1/Sidorina/include/: FlatMatrix.h
3822B1PR1/Sidorina/sample/: main.cpp
3822B1PR1/Sidorina/source/: CRSMatrix.cpp  FlatMatrix.cpp
3822B1PR1/Vershinina/: CMakeLists.txt
3822B1PR1/Vershinina/include/: CRSMatrix.h
3822B1PR1/Voroshilov/: CMakeLists.txt
3822B1PR1/Voroshilov/include/: CMakeLists.txt  CRSMatrix.h  CoordinateMatrix.h  OneArrayMatrix.h
3822B1PR1/Voroshilov/sample/: Main.cpp
3822B1PR1/Voroshilov/source/: CRSMatrix.cpp  CoordinateMatrix.cpp  OneArrayMatrix.cpp  TestMultDuration.cpp
3822B1PR1/Zaitsev/: CMakeLists.txt
3822B1PR1/Zaitsev/include/: CRSMatrix.h  FlatMatrix.h
3822B1PR1/Zaitsev/sample/: CMakeLists.txt  MatrixMultComparison.cpp
3822B1PR1/Zaitsev/source/: CRSMatrix.cpp  FlatMatrix.cpp
